fix: remove extra padding on search bar

--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -2,7 +2,6 @@
     position: relative;
     display: inline-block;
     width: 100%;
-    padding: 0 2.5rem 0 0;
     margin-bottom: 3em;
     &::before {
         position: absolute;
